works fine in sims

--- a/imgui.ini
+++ b/imgui.ini
@@ -19,8 +19,8 @@ Size=235,169
 Collapsed=0
 
 [Window][System Joysticks]
-Pos=5,385
-Size=192,150
+Pos=27,342
+Size=211,150
 Collapsed=0
 
 [Window][DIO]
@@ -50,7 +50,7 @@ Collapsed=0
 
 [Window][Timing]
 Pos=5,150
-Size=135,104
+Size=135,150
 Collapsed=0
 
 [Window][Other Devices]
@@ -59,8 +59,8 @@ Size=250,695
 Collapsed=0
 
 [Window][Joysticks]
-Pos=332,535
-Size=796,73
+Pos=253,503
+Size=796,277
 Collapsed=0
 
 [Window][PDP]
@@ -148,6 +148,10 @@ columns=10
 serpentine=0
 order=0
 start=0
+
+[Joystick][1]
+guid=03000000412300003680000001010000
+useGamepad=0
 
 [DriverStation][Main]
 disable=0
