Add fake simulation support for talonSRXCollection

--- a/imgui.ini
+++ b/imgui.ini
@@ -19,7 +19,7 @@ Size=235,169
 Collapsed=0
 
 [Window][System Joysticks]
-Pos=29,345
+Pos=33,348
 Size=192,150
 Collapsed=0
 
@@ -59,7 +59,7 @@ Size=250,695
 Collapsed=0
 
 [Window][Joysticks]
-Pos=347,599
+Pos=346,598
 Size=796,73
 Collapsed=0
 
@@ -151,4 +151,10 @@ start=0
 
 [DriverStation][Main]
 disable=0
+
+[Device][TalonSRXCollection[1]]
+open=0
+
+[Device][TalonSRXCollection[3]]
+open=0
 
