Simulate NavX hardware

--- a/imgui.ini
+++ b/imgui.ini
@@ -50,7 +50,7 @@ Collapsed=0
 
 [Window][Timing]
 Pos=5,150
-Size=192,150
+Size=192,173
 Collapsed=0
 
 [Window][Other Devices]
@@ -166,5 +166,8 @@ open=1
 open=1
 
 [Device][EncoderBase[2]]
+open=1
+
+[Device][NavX[4]]
 open=1
 
