--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,6 @@ bin/
 
 
 # End of https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
+
+# Characterization ignore
+characterization/characterization-project/build/
