Tested IRL. Shoots nice

--- a/imgui.ini
+++ b/imgui.ini
@@ -20,7 +20,7 @@ Collapsed=0
 
 [Window][System Joysticks]
 Pos=33,348
-Size=192,150
+Size=229,150
 Collapsed=0
 
 [Window][DIO]
@@ -60,7 +60,7 @@ Collapsed=0
 
 [Window][Joysticks]
 Pos=329,534
-Size=796,73
+Size=796,240
 Collapsed=0
 
 [Window][PDP]
@@ -149,6 +149,10 @@ serpentine=0
 order=0
 start=0
 
+[Joystick][0]
+guid=0000000058626f782047616d65706100
+useGamepad=1
+
 [DriverStation][Main]
 disable=0
 
@@ -162,6 +166,9 @@ open=1
 open=1
 
 [Device][EncoderBase[2]]
+open=1
+
+[Device][SimTalon[5]]
 open=1
 
 [Device][NavX[4]]
