fixed some of the issue with pr #108"

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,12 @@ gradle-app.setting
 
 # Created by https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
 
+# Simulator config
+imgui.ini
+
+# Pyhton Compiled
+.pyc
+
 ### C++ ###
 # Prerequisites
 *.d
