new climb command, not finished

--- a/imgui.ini
+++ b/imgui.ini
@@ -25,7 +25,7 @@ Collapsed=0
 
 [Window][DIO]
 Pos=470,20
-Size=104,48
+Size=162,77
 Collapsed=0
 
 [Window][Encoders]
@@ -45,7 +45,7 @@ Collapsed=0
 
 [Window][Solenoids]
 Pos=290,20
-Size=92,48
+Size=154,48
 Collapsed=0
 
 [Window][Timing]
@@ -59,7 +59,7 @@ Size=344,695
 Collapsed=0
 
 [Window][Joysticks]
-Pos=329,534
+Pos=363,828
 Size=796,73
 Collapsed=0
 
@@ -79,13 +79,13 @@ Size=136,48
 Collapsed=0
 
 [SimWindow][GLOBAL]
-width=1366
-height=705
+width=1920
+height=1027
 maximized=1
 xpos=0
 ypos=23
 userScale=2
-style=1
+style=0
 disableOutputsOnDS=1
 [SimWindow][Addressable LEDs]
 visible=1
@@ -120,7 +120,7 @@ visible=1
 enabled=1
 
 [SimWindow][PWM Outputs]
-visible=1
+visible=0
 enabled=1
 
 [SimWindow][Relays]
@@ -165,6 +165,9 @@ open=1
 open=1
 
 [Device][SimTalon[5]]
+open=1
+
+[Device][SimTalon[9]]
 open=1
 
 [Device][NavX[4]]
