--- a/imgui.ini
+++ b/imgui.ini
@@ -34,7 +34,7 @@ Size=85,48
 Collapsed=0
 
 [Window][PWM Outputs]
-Pos=662,37
+Pos=872,328
 Size=104,48
 Collapsed=0
 
@@ -50,17 +50,17 @@ Collapsed=0
 
 [Window][Timing]
 Pos=5,150
-Size=192,173
+Size=192,196
 Collapsed=0
 
 [Window][Other Devices]
-Pos=1060,11
+Pos=1201,103
 Size=344,695
 Collapsed=0
 
 [Window][Joysticks]
 Pos=329,534
-Size=796,73
+Size=796,240
 Collapsed=0
 
 [Window][PDP]
@@ -79,8 +79,8 @@ Size=136,48
 Collapsed=0
 
 [SimWindow][GLOBAL]
-width=1366
-height=705
+width=1920
+height=1027
 maximized=1
 xpos=0
 ypos=23
@@ -149,6 +149,10 @@ serpentine=0
 order=0
 start=0
 
+[Joystick][0]
+guid=78696e70757401000000000000000000
+useGamepad=0
+
 [DriverStation][Main]
 disable=0
 
@@ -170,6 +174,12 @@ open=1
 [Device][NavX[4]]
 open=1
 
+[Device][SimSparkEncoder]
+open=1
+
 [Device][REV Color Sensor V3[0,82]]
+open=1
+
+[Device][SimSparkMax[16]]
 open=1
 
