base for tomorrow
still need to add flush to all inits

--- a/imgui.ini
+++ b/imgui.ini
@@ -59,8 +59,8 @@ Size=344,695
 Collapsed=0
 
 [Window][Joysticks]
-Pos=363,828
-Size=796,73
+Pos=331,626
+Size=796,240
 Collapsed=0
 
 [Window][PDP]
@@ -148,6 +148,10 @@ columns=10
 serpentine=0
 order=0
 start=0
+
+[Joystick][1]
+guid=78696e70757401000000000000000000
+useGamepad=1
 
 [DriverStation][Main]
 disable=0
