Fied up the climber and position setting

--- a/imgui.ini
+++ b/imgui.ini
@@ -20,7 +20,7 @@ Collapsed=0
 
 [Window][System Joysticks]
 Pos=33,348
-Size=192,150
+Size=229,150
 Collapsed=0
 
 [Window][DIO]
@@ -50,11 +50,11 @@ Collapsed=0
 
 [Window][Timing]
 Pos=5,150
-Size=192,150
+Size=192,173
 Collapsed=0
 
 [Window][Other Devices]
-Pos=993,11
+Pos=1230,123
 Size=344,695
 Collapsed=0
 
@@ -79,8 +79,8 @@ Size=136,48
 Collapsed=0
 
 [SimWindow][GLOBAL]
-width=1920
-height=1027
+width=1902
+height=1025
 maximized=1
 xpos=0
 ypos=23
@@ -150,17 +150,11 @@ order=0
 start=0
 
 [Joystick][1]
-guid=78696e70757401000000000000000000
+guid=0000000058626f782047616d65706100
 useGamepad=1
 
 [DriverStation][Main]
 disable=0
-
-[Device][TalonSRXCollection[1]]
-open=1
-
-[Device][TalonSRXCollection[3]]
-open=1
 
 [Device][EncoderBase[1]]
 open=1
@@ -168,15 +162,39 @@ open=1
 [Device][EncoderBase[2]]
 open=1
 
-[Device][SimTalon[5]]
-open=1
+[Device][Talon SRX[2]]
+open=0
 
-[Device][SimTalon[9]]
-open=1
+[Device][Talon SRX[4]]
+open=0
+
+[Device][Talon SRX[5]]
+open=0
 
 [Device][NavX[4]]
 open=1
 
+[Device][Talon SRX[1]]
+open=0
+
+[Device][Talon SRX[3]]
+open=0
+
 [Device][REV Color Sensor V3[0,82]]
+open=1
+
+[Device][Talon SRX[9]]
+open=1
+
+[Device][TalonSRXCollection[1]]
+open=1
+
+[Device][TalonSRXCollection[3]]
+open=1
+
+[Device][SimTalon[5]]
+open=1
+
+[Device][SimTalon[9]]
 open=1
 
