--- a/imgui.ini
+++ b/imgui.ini
@@ -34,7 +34,7 @@ Size=85,48
 Collapsed=0
 
 [Window][PWM Outputs]
-Pos=662,37
+Pos=927,112
 Size=104,48
 Collapsed=0
 
@@ -54,7 +54,7 @@ Size=192,173
 Collapsed=0
 
 [Window][Other Devices]
-Pos=1060,11
+Pos=1208,133
 Size=344,695
 Collapsed=0
 
@@ -79,8 +79,8 @@ Size=136,48
 Collapsed=0
 
 [SimWindow][GLOBAL]
-width=1366
-height=705
+width=1902
+height=1025
 maximized=1
 xpos=0
 ypos=23
@@ -164,11 +164,26 @@ open=1
 [Device][EncoderBase[2]]
 open=1
 
+[Device][Talon SRX[2]]
+open=0
+
 [Device][SimTalon[5]]
 open=1
 
+[Device][Talon SRX[4]]
+open=0
+
 [Device][NavX[4]]
 open=1
+
+[Device][Talon SRX[1]]
+open=0
+
+[Device][Talon SRX[5]]
+open=0
+
+[Device][Talon SRX[3]]
+open=0
 
 [Device][REV Color Sensor V3[0,82]]
 open=1
