Added dashboard widgets

--- a/imgui.ini
+++ b/imgui.ini
@@ -50,7 +50,7 @@ Collapsed=0
 
 [Window][Timing]
 Pos=5,150
-Size=192,196
+Size=192,219
 Collapsed=0
 
 [Window][Other Devices]
@@ -60,7 +60,7 @@ Collapsed=0
 
 [Window][Joysticks]
 Pos=329,534
-Size=796,240
+Size=796,73
 Collapsed=0
 
 [Window][PDP]
@@ -79,8 +79,8 @@ Size=136,48
 Collapsed=0
 
 [SimWindow][GLOBAL]
-width=1920
-height=1027
+width=1902
+height=1025
 maximized=1
 xpos=0
 ypos=23
@@ -149,18 +149,8 @@ serpentine=0
 order=0
 start=0
 
-[Joystick][0]
-guid=78696e70757401000000000000000000
-useGamepad=0
-
 [DriverStation][Main]
 disable=0
-
-[Device][TalonSRXCollection[1]]
-open=1
-
-[Device][TalonSRXCollection[3]]
-open=1
 
 [Device][EncoderBase[1]]
 open=1
@@ -168,8 +158,11 @@ open=1
 [Device][EncoderBase[2]]
 open=1
 
-[Device][SimTalon[5]]
-open=1
+[Device][Talon SRX[2]]
+open=0
+
+[Device][Talon SRX[4]]
+open=0
 
 [Device][NavX[4]]
 open=1
@@ -177,9 +170,24 @@ open=1
 [Device][SimSparkEncoder]
 open=1
 
+[Device][Talon SRX[3]]
+open=0
+
 [Device][REV Color Sensor V3[0,82]]
 open=1
 
+[Device][Talon SRX[1]]
+open=0
+
 [Device][SimSparkMax[16]]
+open=1
+
+[Device][TalonSRXCollection[1]]
+open=1
+
+[Device][TalonSRXCollection[3]]
+open=1
+
+[Device][SimTalon[5]]
 open=1
 
