Add shuffleboard config

--- a/imgui.ini
+++ b/imgui.ini
@@ -19,8 +19,8 @@ Size=235,169
 Collapsed=0
 
 [Window][System Joysticks]
-Pos=33,348
-Size=192,150
+Pos=63,390
+Size=229,150
 Collapsed=0
 
 [Window][DIO]
@@ -59,8 +59,8 @@ Size=344,695
 Collapsed=0
 
 [Window][Joysticks]
-Pos=329,534
-Size=796,73
+Pos=346,605
+Size=796,240
 Collapsed=0
 
 [Window][PDP]
@@ -148,6 +148,10 @@ columns=10
 serpentine=0
 order=0
 start=0
+
+[Joystick][0]
+guid=0000000058626f782047616d65706100
+useGamepad=1
 
 [DriverStation][Main]
 disable=0
