control for intake and hopper

--- a/imgui.ini
+++ b/imgui.ini
@@ -14,18 +14,18 @@ Size=204,65
 Collapsed=0
 
 [Window][FMS]
-Pos=51,574
+Pos=26,568
 Size=235,169
 Collapsed=0
 
 [Window][System Joysticks]
-Pos=33,348
+Pos=9,375
 Size=192,150
 Collapsed=0
 
 [Window][DIO]
 Pos=470,20
-Size=104,48
+Size=162,123
 Collapsed=0
 
 [Window][Encoders]
@@ -54,12 +54,12 @@ Size=192,196
 Collapsed=0
 
 [Window][Other Devices]
-Pos=1201,103
+Pos=1021,42
 Size=344,695
 Collapsed=0
 
 [Window][Joysticks]
-Pos=329,534
+Pos=213,435
 Size=796,240
 Collapsed=0
 
@@ -79,13 +79,13 @@ Size=136,48
 Collapsed=0
 
 [SimWindow][GLOBAL]
-width=1920
-height=1027
+width=1366
+height=745
 maximized=1
 xpos=0
 ypos=23
 userScale=2
-style=1
+style=0
 disableOutputsOnDS=1
 [SimWindow][Addressable LEDs]
 visible=1
@@ -149,27 +149,24 @@ serpentine=0
 order=0
 start=0
 
-[Joystick][0]
+[Joystick][2]
 guid=78696e70757401000000000000000000
-useGamepad=0
+useGamepad=1
 
 [DriverStation][Main]
 disable=0
 
-[Device][TalonSRXCollection[1]]
-open=1
-
-[Device][TalonSRXCollection[3]]
-open=1
-
 [Device][EncoderBase[1]]
-open=1
+open=0
 
 [Device][EncoderBase[2]]
-open=1
+open=0
 
-[Device][SimTalon[5]]
-open=1
+[Device][Talon SRX[2]]
+open=0
+
+[Device][Talon SRX[4]]
+open=0
 
 [Device][NavX[4]]
 open=1
@@ -177,9 +174,36 @@ open=1
 [Device][SimSparkEncoder]
 open=1
 
+[Device][SimSparkMax[11]]
+open=0
+
+[Device][Talon SRX[3]]
+open=0
+
 [Device][REV Color Sensor V3[0,82]]
-open=1
+open=0
+
+[Device][Talon SRX[1]]
+open=0
 
 [Device][SimSparkMax[16]]
+open=1
+
+[Device][TalonSRXCollection[1]]
+open=0
+
+[Device][TalonSRXCollection[3]]
+open=0
+
+[Device][SimTalon[5]]
+open=1
+
+[Device][Talon SRX[12]]
+open=1
+
+[Device][Talon SRX[13]]
+open=1
+
+[Device][Talon SRX[14]]
 open=1
 
