Add robotconstant for shooter PID

--- a/imgui.ini
+++ b/imgui.ini
@@ -25,7 +25,7 @@ Collapsed=0
 
 [Window][DIO]
 Pos=470,20
-Size=104,48
+Size=162,192
 Collapsed=0
 
 [Window][Encoders]
@@ -45,12 +45,12 @@ Collapsed=0
 
 [Window][Solenoids]
 Pos=290,20
-Size=92,48
+Size=148,48
 Collapsed=0
 
 [Window][Timing]
 Pos=5,150
-Size=192,219
+Size=192,242
 Collapsed=0
 
 [Window][Other Devices]
@@ -194,4 +194,16 @@ open=1
 
 [Device][SimTalon[5]]
 open=1
+
+[Device][Talon SRX[12]]
+open=0
+
+[Device][Talon SRX[21]]
+open=0
+
+[Device][Talon SRX[13]]
+open=0
+
+[Device][Talon SRX[14]]
+open=0
 
