--- a/imgui.ini
+++ b/imgui.ini
@@ -20,12 +20,12 @@ Collapsed=0
 
 [Window][System Joysticks]
 Pos=63,390
-Size=229,150
+Size=192,150
 Collapsed=0
 
 [Window][DIO]
 Pos=470,20
-Size=104,48
+Size=162,192
 Collapsed=0
 
 [Window][Encoders]
@@ -45,12 +45,12 @@ Collapsed=0
 
 [Window][Solenoids]
 Pos=290,20
-Size=92,48
+Size=148,48
 Collapsed=0
 
 [Window][Timing]
 Pos=5,150
-Size=192,219
+Size=192,242
 Collapsed=0
 
 [Window][Other Devices]
@@ -60,7 +60,7 @@ Collapsed=0
 
 [Window][Joysticks]
 Pos=346,605
-Size=796,240
+Size=796,73
 Collapsed=0
 
 [Window][PDP]
@@ -79,8 +79,8 @@ Size=136,48
 Collapsed=0
 
 [SimWindow][GLOBAL]
-width=1902
-height=1025
+width=1366
+height=745
 maximized=1
 xpos=0
 ypos=23
@@ -149,10 +149,6 @@ serpentine=0
 order=0
 start=0
 
-[Joystick][0]
-guid=0000000058626f782047616d65706100
-useGamepad=1
-
 [DriverStation][Main]
 disable=0
 
@@ -194,4 +190,16 @@ open=1
 
 [Device][SimTalon[5]]
 open=1
+
+[Device][Talon SRX[12]]
+open=0
+
+[Device][Talon SRX[21]]
+open=0
+
+[Device][Talon SRX[13]]
+open=0
+
+[Device][Talon SRX[14]]
+open=0
 
