--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,41 @@
 plugins {
-    id "java"
-    id "edu.wpi.first.GradleRIO" version "2020.2.2"
+    id "edu.wpi.first.GradleRIO" version "2020.2.2" apply false
 
     // IDE-Support
     id 'idea'
     id 'eclipse'
+}
+
+// Set this to true to enable desktop support.
+def includeDesktopSupport = true
+
+
+allprojects{
+
+    apply plugin: "java"
+    apply plugin: "edu.wpi.first.GradleRIO" 
+
+
+    // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
+    // Also defines JUnit 4.
+    dependencies {
+        implementation wpi.deps.wpilib()
+        nativeZip wpi.deps.wpilibJni(wpi.platforms.roborio)
+        nativeDesktopZip wpi.deps.wpilibJni(wpi.platforms.desktop)
+
+
+        implementation wpi.deps.vendor.java()
+        nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
+        nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
+
+        testImplementation 'junit:junit:4.12'
+
+        // Enable simulation gui support. Must check the box in vscode to enable support
+        // upon debugging
+        simulation wpi.deps.sim.gui(wpi.platforms.desktop, false)
+
+        
+    }
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -41,26 +72,10 @@ deploy {
     }
 }
 
-// Set this to true to enable desktop support.
-def includeDesktopSupport = true
-
-// Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
-// Also defines JUnit 4.
-dependencies {
-    implementation wpi.deps.wpilib()
-    nativeZip wpi.deps.wpilibJni(wpi.platforms.roborio)
-    nativeDesktopZip wpi.deps.wpilibJni(wpi.platforms.desktop)
 
 
-    implementation wpi.deps.vendor.java()
-    nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
-    nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
-
-    testImplementation 'junit:junit:4.12'
-
-    // Enable simulation gui support. Must check the box in vscode to enable support
-    // upon debugging
-    simulation wpi.deps.sim.gui(wpi.platforms.desktop, false)
+dependencies{
+    compile project(':lib5k')
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
