Added button for percy

--- a/imgui.ini
+++ b/imgui.ini
@@ -60,7 +60,7 @@ Collapsed=0
 
 [Window][Joysticks]
 Pos=287,315
-Size=796,73
+Size=796,240
 Collapsed=0
 
 [Window][PDP]
@@ -79,11 +79,11 @@ Size=136,48
 Collapsed=0
 
 [SimWindow][GLOBAL]
-width=1902
-height=1025
-maximized=0
-xpos=9
-ypos=46
+width=1366
+height=745
+maximized=1
+xpos=0
+ypos=23
 userScale=2
 style=1
 disableOutputsOnDS=1
@@ -149,6 +149,10 @@ serpentine=0
 order=0
 start=0
 
+[Joystick][1]
+guid=78696e70757401000000000000000000
+useGamepad=1
+
 [DriverStation][Main]
 disable=0
 
@@ -201,5 +205,8 @@ open=0
 open=0
 
 [Device][Talon SRX[14]]
+open=0
+
+[Device][Talon SRX[22]]
 open=0
 
