--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,9 @@ dependencies {
     // Enable simulation gui support. Must check the box in vscode to enable support
     // upon debugging
     simulation wpi.deps.sim.gui(wpi.platforms.desktop, false)
+
+    // EJML
+    implementation "org.ejml:ejml-simple:0.38"
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
