Add variable shots to ScoreTwice

--- a/imgui.ini
+++ b/imgui.ini
@@ -54,7 +54,7 @@ Size=192,242
 Collapsed=0
 
 [Window][Other Devices]
-Pos=1195,83
+Pos=1211,120
 Size=505,695
 Collapsed=0
 
@@ -89,8 +89,8 @@ Size=706,387
 Collapsed=0
 
 [SimWindow][GLOBAL]
-width=1366
-height=745
+width=949
+height=1043
 maximized=1
 xpos=0
 ypos=23
@@ -183,6 +183,9 @@ name=
 name=
 
 [DIO][1]
+name=
+
+[DIO][8]
 name=
 
 [DIO][3]
