Path Should work

--- a/imgui.ini
+++ b/imgui.ini
@@ -84,8 +84,8 @@ Size=148,123
 Collapsed=0
 
 [Window][2D Field View]
-Pos=303,585
-Size=706,387
+Pos=330,88
+Size=706,547
 Collapsed=0
 
 [SimWindow][GLOBAL]
@@ -183,6 +183,9 @@ name=
 name=
 
 [DIO][1]
+name=
+
+[DIO][8]
 name=
 
 [DIO][3]
