Added simulation support to ADGyro

--- a/imgui.ini
+++ b/imgui.ini
@@ -20,7 +20,7 @@ Collapsed=0
 
 [Window][System Joysticks]
 Pos=6,407
-Size=223,150
+Size=192,150
 Collapsed=0
 
 [Window][DIO]
@@ -60,7 +60,7 @@ Collapsed=0
 
 [Window][Joysticks]
 Pos=287,310
-Size=796,217
+Size=796,73
 Collapsed=0
 
 [Window][PDP]
@@ -167,10 +167,6 @@ serpentine=0
 order=0
 start=0
 
-[Joystick][0]
-useGamepad=0
-guid=030000006f0e00001302000000010000
-
 [DriverStation][Main]
 disable=0
 
@@ -214,6 +210,9 @@ length=0.800000
 
 [PWM][0]
 name=
+
+[Device][ADXRS450_Gyro[0]]
+open=0
 
 [Device][EncoderBase[1]]
 open=1
@@ -274,6 +273,9 @@ open=0
 
 [Device][SmartServo]
 open=1
+
+[Device][ADGyro-Sim]
+open=0
 
 [PCM][8]
 open=0
