--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,4 @@
 # These owners will be the default owners for everything in the repo.
-*       @ewpratten @slownie @johnlownie @awpratten
+*       @ewpratten @slownie @johnlownie @awpratten @wm-c
 
 diagrams/   @rsninja722 @wm-c @srjacks @slownie @catarinaburghi @ewpratten @johnlownie @awpratten
